--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -276,29 +276,27 @@
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "wprost\n",
             "Configuration finished\n",
-            "Dataset of 5279 samples\n",
-            "label\n",
-            "0    2911\n",
-            "1    2368\n",
-            "Name: count, dtype: int64\n",
+            "Dataset of 5242 samples\n",
+            "0    2873\n",
+            "1    2369\n",
+            "Name: label, dtype: int64\n",
             "Preprocessing ended\n",
-            "Accuracy of model 0.9867424242424242\n"
+            "Accuracy of model 0.9866666666666667\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 2/2 [00:04<00:00,  2.42s/it]\n"
+            "100%|██████████| 2/2 [00:02<00:00,  1.48s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "550 34\n",
-            "Duplicated index!!!\n",
-            "Found 402 files\n"
+            "763 42\n",
+            "Found 412 files\n"
           ]
         }
       ],
@@ -306,26 +304,6 @@
         "corp = 'wprost'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
         "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
-        "df_eco = validator(df_eco)\n",
-        "df_eco.to_csv(f\"eco_{corp}.csv\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Duplicated index!!!\n",
-            "Found 342 files\n"
-          ]
-        }
-      ],
-      "source": [
-        "df_eco = pd.concat([df_eco, df_rest.drop(index=2260)])\n",
         "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
@@ -339,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -348,32 +326,46 @@
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "newsweek\n",
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "newsweek\n",
-            "Configuration finished\n",
-            "Dataset of 11417 samples\n",
-            "label\n",
-            "1    8452\n",
-            "0    2965\n",
-            "Name: count, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.989492119089317\n"
+            "Configuration finished\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 2/2 [00:05<00:00,  2.89s/it]\n"
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:7: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+            "  df_eco = pd.read_csv(drive_path / corpus / \"eco_result.csv\", index_col=['id', 'source'], parse_dates=['date'])\n",
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:8: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+            "  df_non_eco = pd.read_csv(drive_path / corpus / \"non_eco_result.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n",
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:9: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+            "  df_rest = pd.read_csv(drive_path / corpus / \"results.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "933 104\n",
-            "Duplicated index!!!\n",
-            "Found 390 files\n"
+            "Dataset of 5245 samples\n",
+            "0    2959\n",
+            "1    2286\n",
+            "Name: label, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9942857142857143\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 3/3 [00:07<00:00,  2.40s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1164 78\n",
+            "Found 365 files\n"
           ]
         }
       ],
@@ -404,28 +396,27 @@
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "wpolityce\n",
             "Configuration finished\n",
-            "Dataset of 5298 samples\n",
-            "label\n",
-            "0    2962\n",
-            "1    2336\n",
-            "Name: count, dtype: int64\n",
+            "Dataset of 5322 samples\n",
+            "0    2985\n",
+            "1    2337\n",
+            "Name: label, dtype: int64\n",
             "Preprocessing ended\n",
-            "Accuracy of model 0.9924528301886792\n"
+            "Accuracy of model 0.9887429643527205\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 3/3 [00:23<00:00,  7.90s/it]\n"
+            "100%|██████████| 3/3 [00:12<00:00,  4.09s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1362 76\n",
-            "Found 413 files\n"
+            "1345 79\n",
+            "Found 416 files\n"
           ]
         }
       ],
@@ -446,14 +437,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['eco_rzepa.csv', 'eco_gpc.csv', 'eco_dorzeczy.csv', 'eco_wyborcza.csv', 'eco_newsweek.csv', 'eco_wprost.csv', 'eco_wpolityce.csv', 'eco_polityka.csv']\n"
+            "['eco_dorzeczy.csv', 'eco_gpc.csv', 'eco_newsweek.csv', 'eco_polityka.csv', 'eco_rzepa.csv', 'eco_wpolityce.csv', 'eco_wprost.csv', 'eco_wyborcza.csv']\n"
           ]
         }
       ],
@@ -472,23 +463,21 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "eco_rzepa.csv\n",
+            "eco_dorzeczy.csv\n",
             "All values in the 'date' column can be parsed to datetime.\n",
             "eco_gpc.csv\n",
             "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_dorzeczy.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_wyborcza.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
             "eco_newsweek.csv\n",
-            "368\n",
-            "There are NaNs in the 'date' column.\n",
-            "eco_wprost.csv\n",
-            "339\n",
-            "There are NaNs in the 'date' column.\n",
-            "eco_wpolityce.csv\n",
             "All values in the 'date' column can be parsed to datetime.\n",
             "eco_polityka.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n",
+            "eco_rzepa.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n",
+            "eco_wpolityce.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n",
+            "eco_wprost.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n",
+            "eco_wyborcza.csv\n",
             "All values in the 'date' column can be parsed to datetime.\n"
           ]
         }
@@ -498,9 +487,9 @@
         "for corp in corps:\n",
         "    df = pd.read_csv(corp, usecols=['clean_text','date'])\n",
         "    print(corp)\n",
-        "    df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
-        "    if df['date'].isnull().any():\n",
-        "        print(len(df[df['date'].isnull()]))\n",
+        "    df['date_parsed'] = pd.to_datetime(df['date'], errors='coerce')\n",
+        "    if df['date_parsed'].isnull().any():\n",
+        "        print(len(df[df['date_parsed'].isnull()]))\n",
         "        print(\"There are NaNs in the 'date' column.\")\n",
         "    else:\n",
         "        print(\"All values in the 'date' column can be parsed to datetime.\")\n",
@@ -595,7 +584,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.6"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
