--- a/DataPrep/Wprost/Wprost.ipynb
+++ b/DataPrep/Wprost/Wprost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,104 +12,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ['wprost-2016.csv', 'wprost-2017.csv', 'wprost-2015.csv']"
+    "df = pd.read_csv('Wprost.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = []\n",
-    "file = files[1]\n",
-    "with open(file, \"r\") as f:\n",
-    "\n",
-    "    lines = f.readlines()\n",
-    "    lines = [ re.sub(r\"\\\"\", \"\", line) for line in lines ]\n",
-    "    lines = [ re.sub(r\",+$\", \"\", line) for line in lines ]\n",
-    "\n",
-    "    tables = lines[0].split(\";\")\n",
-    "    tables = [table.strip() for table in tables]\n",
-    "    n = len(tables)\n",
-    "    print(n)\n",
-    "\n",
-    "    for line in lines[1:]:\n",
-    "        splits = line.split(\";\")\n",
-    "        if len(splits) > n:\n",
-    "            text =  \";\".join(splits[4: - n+5])\n",
-    "            splits = splits[:4] + [text] + splits[-n+5:]\n",
-    "        data.append(splits)\n",
-    "\n",
-    "df = pd.DataFrame(data, columns=tables)\n",
-    "df['text'] = df['text'].apply(lambda x: x.strip())\n",
-    "\n",
-    "if file.endswith('2016.csv'):\n",
-    "    df.drop(columns=['Column1','_1','_2','_3','_4','_5'], inplace=True)\n",
-    "\n",
-    "df.to_csv(\"data/\"+file, index=False)"
+    "df = df[df['text'].isna() == False]\n",
+    "df.text = df.text.apply(lambda x: re.sub(r'\\s+', ' ', x))\n",
+    "df.text = df.text.apply(lambda x: re.sub(r'\\xa0', ' ', x))\n",
+    "df.text = df.text.str.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ok'] = df['link'].apply(lambda x: x[:4] == 'http')"
+    "df = df[~df.date.isna()]\n",
+    "df.date = df.date.apply(lambda x: re.sub('Unknow', '11', x))\n",
+    "df.date = df.date.apply(lambda x: re.sub('^.*\\-', '', x) if re.search('\\/', x) else x)\n",
+    "df.date = df.date.str.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_8102/2370506791.py:1: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+      "  df['date'] = pd.to_datetime(df['date'], errors='coerce')\n"
+     ]
+    }
+   ],
    "source": [
-    "df[~df['ok']]"
+    "df['date'] = pd.to_datetime(df['date'], errors='coerce')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "files = os.listdir(\"data\")\n",
-    "columns = pd.read_csv(\"data/\" + files[2]).columns.values\n",
-    "\n",
-    "for file in files:\n",
-    "\n",
-    "    df = pd.read_csv(\"data/\" + file)\n",
-    "    for col in df.columns.values:\n",
-    "        if col not in columns:\n",
-    "            print(col + \" \" + file)"
+    "df = df.drop(columns='id')\n",
+    "df = df.reset_index()\n",
+    "df = df.rename(columns={'index': 'id'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title_main</th>\n",
+       "      <th>title_sub</th>\n",
+       "      <th>magazine_nr</th>\n",
+       "      <th>Wydanie</th>\n",
+       "      <th>text</th>\n",
+       "      <th>link</th>\n",
+       "      <th>source</th>\n",
+       "      <th>author 1</th>\n",
+       "      <th>author 2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>author 10</th>\n",
+       "      <th>image</th>\n",
+       "      <th>image_desp</th>\n",
+       "      <th>hot</th>\n",
+       "      <th>vote_up</th>\n",
+       "      <th>vote_down</th>\n",
+       "      <th>date</th>\n",
+       "      <th>title</th>\n",
+       "      <th>clean_text</th>\n",
+       "      <th>clean_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Kto przetrwa w polskiej polityce</td>\n",
+       "      <td>„Sytuacja dla rządu bardzo niebezpieczna”. Pol...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1KEK2022</td>\n",
+       "      <td>Jeżeli konflikty w rządzie będą eskalowały, Ja...</td>\n",
+       "      <td>https://www.wprost.pl//tygodnik/10586845/2022-...</td>\n",
+       "      <td>WPROST</td>\n",
+       "      <td>Eliza Olczyk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://img.wprost.pl/img/zbigniew-ziobro-i-ma...</td>\n",
+       "      <td>Zbigniew Ziobro i Mateusz Morawiecki Źródło:Ne...</td>\n",
+       "      <td>81,822</td>\n",
+       "      <td>48</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>Kto przetrwa w polskiej polityce„Sytuacja dla ...</td>\n",
+       "      <td>konflikt wrządzi eskaloweć jarosław Kaczyński ...</td>\n",
+       "      <td>przetrwać wpolski politycesytuacja dlarząd nie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Najgorętsza polityczna plotka</td>\n",
+       "      <td>Najgorętsza polityczna plotka na początek 2022...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1KEK2022</td>\n",
+       "      <td>Skończył się rok, a wraz z nim skończyła się t...</td>\n",
+       "      <td>https://www.wprost.pl//tygodnik/10586812/najgo...</td>\n",
+       "      <td>WPROST</td>\n",
+       "      <td>Joanna Miziołek</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://img.wprost.pl/img/jaroslaw-kaczynski-i...</td>\n",
+       "      <td>Jarosław Kaczyński i Zbigniew Ziobro Źródło:Ne...</td>\n",
+       "      <td>312,327</td>\n",
+       "      <td>129</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>Najgorętsza polityczna plotkaNajgorętsza polit...</td>\n",
+       "      <td>skończyć rok awraz zni skończyć cierpliwość Ja...</td>\n",
+       "      <td>najgorętsza polityczny plotkanajgorętsza polit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Chaos w Zakopanem</td>\n",
+       "      <td>Chaos w Zakopanem. „Zwalanie całej winy na Jac...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1KEK2022</td>\n",
+       "      <td>Wszyscy wieszczący, że noworoczne Zakopane ze ...</td>\n",
+       "      <td>https://www.wprost.pl//tygodnik/10588144/chaos...</td>\n",
+       "      <td>WPROST</td>\n",
+       "      <td>Dariusz Grzędziński</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://img.wprost.pl/img/policja-na-ulicach-z...</td>\n",
+       "      <td>Policja na ulicach Zakopanego Źródło:Policja</td>\n",
+       "      <td>165,447</td>\n",
+       "      <td>26</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>Chaos w ZakopanemChaos w Zakopanem. „Zwalanie ...</td>\n",
+       "      <td>wieszczący żenoworoczny zakopać zestolic polsk...</td>\n",
+       "      <td>chaos wzakopanemchaos wzakopan zwalanie cały w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Na czym polega fenomen Konfederacji</td>\n",
+       "      <td>„Mniejsze mózgi kobiet” przyciągają w sieci mł...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1KEK2022</td>\n",
+       "      <td>Platformy jak YouTube, czy Facebook zwracają u...</td>\n",
+       "      <td>https://www.wprost.pl//tygodnik/10585699/mniej...</td>\n",
+       "      <td>WPROST</td>\n",
+       "      <td>Dariusz Grzędziński</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://img.wprost.pl/img/grzegorz-braun-janus...</td>\n",
+       "      <td>Grzegorz Braun, Janusz Korwin Mikke, Jakub Kul...</td>\n",
+       "      <td>9,999</td>\n",
+       "      <td>15</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>Na czym polega fenomen Konfederacji„Mniejsze m...</td>\n",
+       "      <td>platforma youtuby czyfacebook zwracać uwaga gł...</td>\n",
+       "      <td>co polegać fenomen konfederacjimniejoki mózg k...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Kradzież bez litości</td>\n",
+       "      <td>Znany trener fitness zachorował na białaczkę. ...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1KEK2022</td>\n",
+       "      <td>Cicha noc, święta noc? Nie dla złodziei z Biał...</td>\n",
+       "      <td>https://www.wprost.pl//tygodnik/10587112/zacho...</td>\n",
+       "      <td>WPROST</td>\n",
+       "      <td>Kamil Pawełoszek</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://img.wprost.pl/img/przemyslaw-dunaj-na-...</td>\n",
+       "      <td>Przemysław Dunaj na oddziale hematologii w szc...</td>\n",
+       "      <td>40,343</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>Kradzież bez litościZnany trener fitness zacho...</td>\n",
+       "      <td>cichy noc święty noc niedlazłodzieja zbiałogar...</td>\n",
+       "      <td>kradzież litościznać trener fitness zachorować...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                           title_main  \\\n",
+       "0   0     Kto przetrwa w polskiej polityce   \n",
+       "1   1        Najgorętsza polityczna plotka   \n",
+       "2   2                    Chaos w Zakopanem   \n",
+       "3   3  Na czym polega fenomen Konfederacji   \n",
+       "4   4                 Kradzież bez litości   \n",
+       "\n",
+       "                                           title_sub  magazine_nr   Wydanie  \\\n",
+       "0  „Sytuacja dla rządu bardzo niebezpieczna”. Pol...         2018  1KEK2022   \n",
+       "1  Najgorętsza polityczna plotka na początek 2022...         2018  1KEK2022   \n",
+       "2  Chaos w Zakopanem. „Zwalanie całej winy na Jac...         2018  1KEK2022   \n",
+       "3  „Mniejsze mózgi kobiet” przyciągają w sieci mł...         2018  1KEK2022   \n",
+       "4  Znany trener fitness zachorował na białaczkę. ...         2018  1KEK2022   \n",
+       "\n",
+       "                                                text  \\\n",
+       "0  Jeżeli konflikty w rządzie będą eskalowały, Ja...   \n",
+       "1  Skończył się rok, a wraz z nim skończyła się t...   \n",
+       "2  Wszyscy wieszczący, że noworoczne Zakopane ze ...   \n",
+       "3  Platformy jak YouTube, czy Facebook zwracają u...   \n",
+       "4  Cicha noc, święta noc? Nie dla złodziei z Biał...   \n",
+       "\n",
+       "                                                link  source  \\\n",
+       "0  https://www.wprost.pl//tygodnik/10586845/2022-...  WPROST   \n",
+       "1  https://www.wprost.pl//tygodnik/10586812/najgo...  WPROST   \n",
+       "2  https://www.wprost.pl//tygodnik/10588144/chaos...  WPROST   \n",
+       "3  https://www.wprost.pl//tygodnik/10585699/mniej...  WPROST   \n",
+       "4  https://www.wprost.pl//tygodnik/10587112/zacho...  WPROST   \n",
+       "\n",
+       "              author 1 author 2  ... author 10  \\\n",
+       "0         Eliza Olczyk      NaN  ...       NaN   \n",
+       "1      Joanna Miziołek      NaN  ...       NaN   \n",
+       "2  Dariusz Grzędziński      NaN  ...       NaN   \n",
+       "3  Dariusz Grzędziński      NaN  ...       NaN   \n",
+       "4     Kamil Pawełoszek      NaN  ...       NaN   \n",
+       "\n",
+       "                                               image  \\\n",
+       "0  https://img.wprost.pl/img/zbigniew-ziobro-i-ma...   \n",
+       "1  https://img.wprost.pl/img/jaroslaw-kaczynski-i...   \n",
+       "2  https://img.wprost.pl/img/policja-na-ulicach-z...   \n",
+       "3  https://img.wprost.pl/img/grzegorz-braun-janus...   \n",
+       "4  https://img.wprost.pl/img/przemyslaw-dunaj-na-...   \n",
+       "\n",
+       "                                          image_desp      hot vote_up  \\\n",
+       "0  Zbigniew Ziobro i Mateusz Morawiecki Źródło:Ne...   81,822      48   \n",
+       "1  Jarosław Kaczyński i Zbigniew Ziobro Źródło:Ne...  312,327     129   \n",
+       "2       Policja na ulicach Zakopanego Źródło:Policja  165,447      26   \n",
+       "3  Grzegorz Braun, Janusz Korwin Mikke, Jakub Kul...    9,999      15   \n",
+       "4  Przemysław Dunaj na oddziale hematologii w szc...   40,343       0   \n",
+       "\n",
+       "  vote_down       date                                              title  \\\n",
+       "0      20.0 2022-01-03  Kto przetrwa w polskiej polityce„Sytuacja dla ...   \n",
+       "1      48.0 2022-01-03  Najgorętsza polityczna plotkaNajgorętsza polit...   \n",
+       "2      77.0 2022-01-03  Chaos w ZakopanemChaos w Zakopanem. „Zwalanie ...   \n",
+       "3      46.0 2022-01-03  Na czym polega fenomen Konfederacji„Mniejsze m...   \n",
+       "4      16.0 2022-01-03  Kradzież bez litościZnany trener fitness zacho...   \n",
+       "\n",
+       "                                          clean_text  \\\n",
+       "0  konflikt wrządzi eskaloweć jarosław Kaczyński ...   \n",
+       "1  skończyć rok awraz zni skończyć cierpliwość Ja...   \n",
+       "2  wieszczący żenoworoczny zakopać zestolic polsk...   \n",
+       "3  platforma youtuby czyfacebook zwracać uwaga gł...   \n",
+       "4  cichy noc święty noc niedlazłodzieja zbiałogar...   \n",
+       "\n",
+       "                                         clean_title  \n",
+       "0  przetrwać wpolski politycesytuacja dlarząd nie...  \n",
+       "1  najgorętsza polityczny plotkanajgorętsza polit...  \n",
+       "2  chaos wzakopanemchaos wzakopan zwalanie cały w...  \n",
+       "3  co polegać fenomen konfederacjimniejoki mózg k...  \n",
+       "4  kradzież litościznać trener fitness zachorować...  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_list = []\n",
-    "for file in files:\n",
-    "    df = pd.read_csv(\"data/\" + file)\n",
-    "    df_list.append(df)\n",
-    "df_all = pd.concat(df_list)"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all.to_csv(\"Wprost.csv\", index=False)"
+    "df.to_csv('Wprost.csv', index=False)   "
    ]
   }
  ],
@@ -129,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
