--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,6 +28,10 @@
         "        df = df.reset_index()\n",
         "        df = df.drop(columns = ['id'])\n",
         "        df = df.rename(columns = {'index': 'id'})\n",
+        "    elif 'id' not in df.columns.values:\n",
+        "        df = df.reset_index()\n",
+        "        df = df.rename(columns = {'index': 'id'})\n",
+        "    df['date'] = pd.to_datetime(df['date'])\n",
         "    print(f\"Found {len(df)} files\")\n",
         "    return df"
       ]
@@ -48,9 +52,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "rzepa\n",
+            "Configuration finished\n",
+            "Dataset of 8648 samples\n",
+            "label\n",
+            "1    5955\n",
+            "0    2693\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9965317919075144\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 58/58 [01:56<00:00,  2.01s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "28861 852\n",
+            "Found 6807 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'rzepa'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
@@ -68,9 +104,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "wyborcza\n",
+            "Configuration finished\n",
+            "Dataset of 17765 samples\n",
+            "label\n",
+            "0    10375\n",
+            "1     7390\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9966235227912211\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 96/96 [03:35<00:00,  2.25s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "47627 1760\n",
+            "Duplicated index!!!\n",
+            "Found 7151 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'wyborcza'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
@@ -81,9 +150,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 7151 files\n"
+          ]
+        }
+      ],
       "source": [
         "df_final = validator(df_final)\n",
         "df_final.to_csv(f\"eco_{corp}.csv\")"
@@ -98,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -107,30 +184,36 @@
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "gpc\n",
-            "Configuration finished\n",
-            "Dataset of 7471 samples\n",
-            "label\n",
-            "1    4128\n",
-            "0    3343\n",
-            "Name: count, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9986631016042781\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 24/24 [00:29<00:00,  1.24s/it]\n"
+            "Configuration finished\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "11504 1149\n",
+            "Dataset of 8166 samples\n",
+            "label\n",
+            "1    4129\n",
+            "0    4037\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.99265605875153\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 24/24 [00:39<00:00,  1.64s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "11504 1151\n",
             "Duplicated index!!!\n",
-            "Found 3278 files\n"
+            "Found 3280 files\n"
           ]
         }
       ],
@@ -151,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -161,28 +244,28 @@
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "polityka\n",
             "Configuration finished\n",
-            "Dataset of 11849 samples\n",
+            "Dataset of 5683 samples\n",
             "label\n",
-            "1    8700\n",
             "0    3149\n",
+            "1    2534\n",
             "Name: count, dtype: int64\n",
             "Preprocessing ended\n",
-            "Accuracy of model 0.9873417721518988\n"
+            "Accuracy of model 0.9894551845342706\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 4/4 [00:12<00:00,  3.16s/it]\n"
+            "100%|██████████| 4/4 [00:22<00:00,  5.54s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1909 220\n",
-            "Found 754 files\n"
+            "1909 149\n",
+            "Found 683 files\n"
           ]
         }
       ],
@@ -210,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -220,28 +303,28 @@
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "dorzeczy\n",
             "Configuration finished\n",
-            "Dataset of 11342 samples\n",
+            "Dataset of 5176 samples\n",
             "label\n",
-            "1    8400\n",
             "0    2942\n",
+            "1    2234\n",
             "Name: count, dtype: int64\n",
             "Preprocessing ended\n",
-            "Accuracy of model 0.9947136563876652\n"
+            "Accuracy of model 0.9903474903474904\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 2/2 [00:04<00:00,  2.44s/it]\n"
+            "100%|██████████| 2/2 [00:11<00:00,  5.76s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "696 76\n",
-            "Found 242 files\n"
+            "696 49\n",
+            "Found 220 files\n"
           ]
         }
       ],
@@ -266,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -275,28 +358,35 @@
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "wprost\n",
-            "Configuration finished\n",
-            "Dataset of 5242 samples\n",
-            "0    2873\n",
-            "1    2369\n",
-            "Name: label, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9866666666666667\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 2/2 [00:02<00:00,  1.48s/it]\n"
+            "Configuration finished\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "763 42\n",
-            "Found 412 files\n"
+            "Dataset of 5240 samples\n",
+            "label\n",
+            "0    2873\n",
+            "1    2367\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9885496183206107\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 2/2 [00:05<00:00,  2.98s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "763 30\n",
+            "Found 400 files\n"
           ]
         }
       ],
@@ -333,11 +423,9 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/ps/Code/Climate/Classification/resources/get_data.py:7: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:7: UserWarning: Parsing dates in %d.%m.%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
             "  df_eco = pd.read_csv(drive_path / corpus / \"eco_result.csv\", index_col=['id', 'source'], parse_dates=['date'])\n",
-            "/home/ps/Code/Climate/Classification/resources/get_data.py:8: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
-            "  df_non_eco = pd.read_csv(drive_path / corpus / \"non_eco_result.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n",
-            "/home/ps/Code/Climate/Classification/resources/get_data.py:9: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:9: UserWarning: Parsing dates in %d.%m.%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
             "  df_rest = pd.read_csv(drive_path / corpus / \"results.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n"
           ]
         },
@@ -345,27 +433,28 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Dataset of 5245 samples\n",
+            "Dataset of 5246 samples\n",
+            "label\n",
             "0    2959\n",
-            "1    2286\n",
-            "Name: label, dtype: int64\n",
+            "1    2287\n",
+            "Name: count, dtype: int64\n",
             "Preprocessing ended\n",
-            "Accuracy of model 0.9942857142857143\n"
+            "Accuracy of model 0.9904761904761905\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 3/3 [00:07<00:00,  2.40s/it]\n"
+            "100%|██████████| 3/3 [00:16<00:00,  5.36s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1164 78\n",
-            "Found 365 files\n"
+            "1164 69\n",
+            "Found 356 files\n"
           ]
         }
       ],
@@ -386,7 +475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -395,28 +484,35 @@
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "wpolityce\n",
-            "Configuration finished\n",
-            "Dataset of 5322 samples\n",
-            "0    2985\n",
-            "1    2337\n",
-            "Name: label, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9887429643527205\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 3/3 [00:12<00:00,  4.09s/it]\n"
+            "Configuration finished\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1345 79\n",
-            "Found 416 files\n"
+            "Dataset of 5321 samples\n",
+            "label\n",
+            "0    2985\n",
+            "1    2336\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9924953095684803\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 3/3 [00:24<00:00,  8.24s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1345 67\n",
+            "Found 404 files\n"
           ]
         }
       ],
@@ -437,14 +533,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['eco_dorzeczy.csv', 'eco_gpc.csv', 'eco_newsweek.csv', 'eco_polityka.csv', 'eco_rzepa.csv', 'eco_wpolityce.csv', 'eco_wprost.csv', 'eco_wyborcza.csv']\n"
+            "['eco_rzepa.csv', 'eco_gpc.csv', 'eco_dorzeczy.csv', 'eco_wyborcza.csv', 'eco_newsweek.csv', 'eco_wprost.csv', 'eco_wpolityce.csv', 'eco_polityka.csv']\n"
           ]
         }
       ],
@@ -462,52 +558,31 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "eco_dorzeczy.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_gpc.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_newsweek.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_polityka.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_rzepa.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_wpolityce.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_wprost.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n",
-            "eco_wyborcza.csv\n",
-            "All values in the 'date' column can be parsed to datetime.\n"
-          ]
-        }
-      ],
-      "source": [
-        "data = []\n",
-        "for corp in corps:\n",
-        "    df = pd.read_csv(corp, usecols=['clean_text','date'])\n",
-        "    print(corp)\n",
-        "    df['date_parsed'] = pd.to_datetime(df['date'], errors='coerce')\n",
-        "    if df['date_parsed'].isnull().any():\n",
-        "        print(len(df[df['date_parsed'].isnull()]))\n",
-        "        print(\"There are NaNs in the 'date' column.\")\n",
-        "    else:\n",
-        "        print(\"All values in the 'date' column can be parsed to datetime.\")\n",
-        "    data.append(df)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "## Most Common ngrams"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "19301"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df = pd.concat(data)\n",
+        "len(df)"
       ]
     },
     {
@@ -703,7 +778,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.7"
+      "version": "3.11.6"
     }
   },
   "nbformat": 4,
