--- a/Classification/plots.ipynb
+++ b/Classification/plots.ipynb
@@ -21,16 +21,9 @@
     "with open('plots/model.pkl', 'rb') as f:\n",
     "    clf = pickle.load(f)\n",
     "\n",
-    "\n",
-    "\n",
-    "fig, axes = plt.subplots(nrows = 1,ncols = 3,figsize = (20,5), dpi=900)\n",
-    "for index in range(3):\n",
-    "    tree.plot_tree(clf.estimators_[index],\n",
-    "                   filled = True,\n",
-    "                   ax = axes[index])\n",
-    "\n",
-    "    axes[index].set_title('Estimator: ' + str(index), fontsize = 11)\n",
-    "fig.savefig('plots/rf_3trees.png')"
+    "plt.figure(figsize=(30, 15))\n",
+    "tree.plot_tree(clf.estimators_[0], filled=True)\n",
+    "plt.savefig('plots/rf_tree.png', dpi=900)\n"
    ]
   },
   {
@@ -151,12 +144,13 @@
     "plt.style.use('ggplot')\n",
     "df_tsne = pd.read_csv(\"plots/tsne.csv\")\n",
     "plt.figure(figsize=(16,10))\n",
-    "plt.title(\"t-SNE results on input data for the classification layer of neural network\")\n",
-    "plt.scatter(df_tsne[df_tsne[\"class\"] == 0][\"x\"], df_tsne[df_tsne[\"class\"] == 0][\"y\"], label=\"Other\", alpha=0.5)\n",
-    "plt.scatter(df_tsne[df_tsne[\"class\"] == 1][\"x\"], df_tsne[df_tsne[\"class\"] == 1][\"y\"], label=\"Climate related\", alpha=0.5)\n",
+    "\"t-SNE results on input data for the classification layer of neural network\"\n",
+    "plt.title(\"Rezultat t-SNE na danych wejściowych warstwy klasyfikującej sieci neuronowej\")\n",
+    "plt.scatter(df_tsne[df_tsne[\"class\"] == 0][\"x\"], df_tsne[df_tsne[\"class\"] == 0][\"y\"], label=\"Inne\", alpha=0.5)\n",
+    "plt.scatter(df_tsne[df_tsne[\"class\"] == 1][\"x\"], df_tsne[df_tsne[\"class\"] == 1][\"y\"], label=\"Artykuł związany z klimatem\", alpha=0.5)\n",
     "plt.legend()\n",
-    "plt.xlabel(\"t-SNE x dimension\")\n",
-    "plt.ylabel(\"t-SNE y dimension\")\n",
+    "plt.xlabel(\"t-SNE wymiar x\")\n",
+    "plt.ylabel(\"t-SNE wymiar y\")\n",
     "plt.savefig(\"plots/tsne.png\", dpi=600)"
    ]
   },
