--- a/Scrap/dorzeczy.ipynb
+++ b/Scrap/dorzeczy.ipynb
@@ -55,7 +55,7 @@
     "def get_url_mobi(link):\n",
     "    driver.get(link)\n",
     "    time.sleep(0.5)\n",
-    "    button = driver.find_element('link text',\"MOBI\")\n",
+    "    button = driver.find_element('link text',\"pdf\")\n",
     "    button.click()\n",
     "    time.sleep(0.5)\n",
     "\n",
