--- a/Tsne/tsne.ipynb
+++ b/Tsne/tsne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_x.shape"
+    "vocab = vectorizer.vocabulary_\n",
+    "selected = selector.get_support()\n",
+    "keys = vocab.keys()\n",
+    "keys = np.array(list(keys))\n",
+    "ngrams = keys[selected]\n",
+    "np.savetxt(\"ngrams_7500.txt\", ngrams, fmt='%s', delimiter='\\n')"
    ]
   },
   {
